; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarUI8ChangeTypeEx.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarUI8ChangeTypeEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@has_i8 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"I8 and UI8 data types are not available\0A\00", align 1
@VT_UI8 = common dso_local global i32 0, align 4
@V_UI8 = common dso_local global i32 0, align 4
@COMMON_TYPETEST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarUI8ChangeTypeEx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarUI8ChangeTypeEx() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32, i32* @has_i8, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %0
  %8 = call i32 @win_skip(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %14

9:                                                ; preds = %0
  store i32 1, i32* %2, align 4
  %10 = load i32, i32* @VT_UI8, align 4
  %11 = load i32, i32* @V_UI8, align 4
  %12 = call i32 @INITIAL_TYPETESTI8(i32 %10, i32 %11)
  %13 = load i32, i32* @COMMON_TYPETEST, align 4
  br label %14

14:                                               ; preds = %9, %7
  ret void
}

declare dso_local i32 @win_skip(i8*) #1

declare dso_local i32 @INITIAL_TYPETESTI8(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
